--- a/assets/styles/admin-main.scss
+++ b/assets/styles/admin-main.scss
@@ -571,8 +571,8 @@ $bp-xl: 1200px;
 
 		&:hover,
 		&:focus-visible {
-			background-color: darken(#D63638, 10%);
-			border-color: darken(#D63638, 10%);
+			background-color: adjust-color(#D63638, $lightness: -10%);
+			border-color: adjust-color(#D63638, $lightness: -10%);
 			box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
 		}
 	}
